2007-07-30  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguage.c: map the old Data Type
	style to def:type.

2007-07-30  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/python.lang:
	* gtksourceview/language-specs/ruby.lang:
	* gtksourceview/language-specs/d.lang:
	* gtksourceview/language-specs/rpmspec.lang:

	Separate python builtins, normalize style names a bit,
	other minor bugfixes.

2007-07-29  Steve Frécinaux  <code@istique.net>

	* gtksourceview/language-specs/perl.lang: use newly defined def:
	styles.

2007-07-29  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/c.lang:
	* gtksourceview/language-specs/changelog.lang:
	* gtksourceview/language-specs/gvim.xml:
	* gtksourceview/language-specs/xml.lang:

	Minor style cleanups

2007-07-29  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/csharp.lang: highlight numbers.
	* gtksourceview/language-specs/vhdl.lang: port to new format.

2007-07-28  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/rpmspec.lang: port rpm spec
	file highlighting to the new format and rename it from
	spec.lang to rpmspec.lang.
	* gtksourceview/language-specs/def.lang: fix email regex,
	'+' is allowed.

2007-07-28  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/javascript.lang:
	* gtksourceview/language-specs/xml.lang:
	* gtksourceview/language-specs/lua.lang:
	* gtksourceview/language-specs/java.lang:

	Updated to take advantage of the new style schemes.

2007-07-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/c.lang:

	fix inlcude-file highlighting.

2007-07-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/changelog.lang:
	* gtksourceview/language-specs/kate.xml:

	Highlight bullet and make changelog hl in kate scheme look
	like the original.

2007-07-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ada.lang:
