@@ -71,9 +71,9 @@
   <style name="diff:location"               use-style="def:statement"/>
   <style name="diff:diff-file"              use-style="def:type"/>
 
-  <style name="xml:attribute-name"          foreground="#6A5ACD"/>
-  <style name="xml:tags"                    foreground="#008B8B"/>
-  <style name="xml:namespace"               foreground="#2E8B57" bold="true"/>
+  <style name="xml:tags"                    foreground="cyan"/>
+  <style name="xml:attribute-name"          foreground="violet"/>
+  <style name="xml:namespace"               foreground="green" bold="true"/>
 
   <style name="js:object"                   foreground="#2E8B57" bold="true"/>
   <style name="js:constructors"             foreground="#008B8B"/>
@@ -84,8 +84,6 @@
 
   <style name="sh:variable1"                foreground="#6A5ACD"/>
   <style name="sh:variable2"                foreground="#008B8B"/>
-
-  <style name="python:builtins"             foreground="#2E8B57" bold="true"/>
 
   <!-- legacy styles for old lang files -->
   <style name="Others"                      foreground="#2E8B57" bold="true"/>
